--- a/src/app/exercises/03-interview/styles.css
+++ b/src/app/exercises/03-interview/styles.css
@@ -40,6 +40,11 @@ aside {
   border: 1px solid hsl(0deg 0% 30%);
   border-radius: 24px 24px 8px 8px;
 }
+@media (max-width: 499px) {
+  aside {
+    display: none;
+  }
+}
 aside h2 {
   width: fit-content;
   margin: 1em auto 0.5em;
